force-app/main/default/objects/Expenses_Management__c/Expenses_Management__c.object-meta.xml
<CustomObject>
    <label>费用管理</label>
    <nameField>
        <label>费用大类</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>