force-app/main/default/objects/Expenses_Management__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <formula>Expenses_Type__c +&apos;_&apos;+ Expenses_TypeEN__c + &apos;_&apos; + Pcc_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>费用类别</label>
    <type>Text</type>
</CustomField>