force-app/main/default/objects/Expenses_Management__c/fields/Expenses_Type__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Type__c</fullName>
    <label>费用类别CN</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>