force-app/main/default/objects/Expenses_Management__c/fields/Pcc_Code__c.field-meta.xml
<CustomField>
    <fullName>Pcc_Code__c</fullName>
    <label>Pcc Code</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>