force-app/main/default/objects/Expenses_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expenses_Type__c</columns>
    <columns>Expenses_TypeEN__c</columns>
    <columns>Pcc_Code__c</columns>
    <columns>Expenses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>